Simple first implementation using CoinMarketCap as a source.

--- a/src/CoinBot/CoinBot.Discord/CoinBot.Discord.csproj
+++ b/src/CoinBot/CoinBot.Discord/CoinBot.Discord.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoinBot.CoinSources\CoinBot.CoinSources.csproj" />
+  </ItemGroup>
+
 </Project>
