--- a/src/CoinBot/CoinBot.CoinSources/CoinBot.CoinSources.csproj
+++ b/src/CoinBot/CoinBot.CoinSources/CoinBot.CoinSources.csproj
@@ -14,4 +14,10 @@
     <TreatSpecificWarningsAsErrors />
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.2" />
+    <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0" />
+    <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0" />
+  </ItemGroup>
+
 </Project>
