--- a/src/CoinBot/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot/CoinBot.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <PostBuildEvent></PostBuildEvent>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,5 +16,9 @@
     <ProjectReference Include="..\CoinBot.CoinSources\CoinBot.CoinSources.csproj" />
     <ProjectReference Include="..\CoinBot.Discord\CoinBot.Discord.csproj" />
   </ItemGroup>
+
+  <Target Name="PrePublish" BeforeTargets="PrepareForPublish">
+    <Copy SourceFiles="token.json.template" DestinationFiles="$(PublishDir)\token.json" SkipUnchangedFiles="true" />
+  </Target>
 
 </Project>
