--- a/src/CoinBot/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot/CoinBot.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.2" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="1.4.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
