--- a/src/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot.csproj
@@ -1,26 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
-    <PostBuildEvent></PostBuildEvent>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.2" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="1.4.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.0.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="1.4.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="3.0.1" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\CoinBot.CoinSources\CoinBot.CoinSources.csproj" />
     <ProjectReference Include="..\CoinBot.Discord\CoinBot.Discord.csproj" />
   </ItemGroup>
-
   <Target Name="PrePublish" BeforeTargets="PrepareForPublish">
     <Copy SourceFiles="token.json.template" DestinationFiles="$(PublishDir)\token.json" SkipUnchangedFiles="true" />
   </Target>
-
 </Project>
