Add multiple exchange markets

--- a/src/CoinBot.Discord/CoinBot.Discord.csproj
+++ b/src/CoinBot.Discord/CoinBot.Discord.csproj
@@ -24,7 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoinBot.CoinSources\CoinBot.CoinSources.csproj" />
+    <ProjectReference Include="..\CoinBot.Clients\CoinBot.Clients.csproj" />
+    <ProjectReference Include="..\CoinBot.Core\CoinBot.Core.csproj" />
   </ItemGroup>
 
 </Project>
