--- a/src/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot.csproj
@@ -6,6 +6,7 @@
     </PostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.0.0" />
@@ -19,7 +20,8 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CoinBot.CoinSources\CoinBot.CoinSources.csproj" />
+    <ProjectReference Include="..\CoinBot.Clients\CoinBot.Clients.csproj" />
+    <ProjectReference Include="..\CoinBot.Core\CoinBot.Core.csproj" />
     <ProjectReference Include="..\CoinBot.Discord\CoinBot.Discord.csproj" />
   </ItemGroup>
 </Project>
