Copy appsettings.json to the output folder.

--- a/src/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot.csproj
@@ -24,4 +24,9 @@
     <ProjectReference Include="..\CoinBot.Core\CoinBot.Core.csproj" />
     <ProjectReference Include="..\CoinBot.Discord\CoinBot.Discord.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
