Make the CoinMarketCal client compatible with the new official API

--- a/src/CoinBot/appsettings.json
+++ b/src/CoinBot/appsettings.json
@@ -4,5 +4,9 @@
   },
   "MarketManager": {
     "RefreshInterval": 2
+  },
+  "CoinMarketCal": {
+    "ClientId": "",
+    "ClientSecret": ""
   }
 }
