--- a/src/CoinBot.Clients/CoinBot.Clients.csproj
+++ b/src/CoinBot.Clients/CoinBot.Clients.csproj
@@ -37,7 +37,16 @@
     </ItemGroup>
 
     <ItemGroup>
-    <ProjectReference Include="..\CoinBot.Core\CoinBot.Core.csproj" />
-  </ItemGroup>
+        <PackageReference Include="AsyncFixer" Version="1.1.6" PrivateAssets="All"/>
+        <PackageReference Include="FunFair.CodeAnalysis" Version="1.0.5.144" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.5.132" PrivateAssets="All"/>
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="8.3.0.14607" PrivateAssets="All"/>
+        <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.3" PrivateAssets="All"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\CoinBot.Core\CoinBot.Core.csproj"/>
+    </ItemGroup>
 
 </Project>
