--- a/src/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot.csproj
@@ -38,19 +38,29 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="1.4.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.0.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CoinBot.Clients\CoinBot.Clients.csproj" />
-    <ProjectReference Include="..\CoinBot.Core\CoinBot.Core.csproj" />
-    <ProjectReference Include="..\CoinBot.Discord\CoinBot.Discord.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Options" Version="2.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0"/>
+        <PackageReference Include="Serilog.Extensions.Logging" Version="1.4.0"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="3.0.1"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="AsyncFixer" Version="1.1.6" PrivateAssets="All"/>
+        <PackageReference Include="FunFair.CodeAnalysis" Version="1.0.5.144" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.5.132" PrivateAssets="All"/>
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="8.3.0.14607" PrivateAssets="All"/>
+        <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.3" PrivateAssets="All"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\CoinBot.Clients\CoinBot.Clients.csproj"/>
+        <ProjectReference Include="..\CoinBot.Core\CoinBot.Core.csproj"/>
+        <ProjectReference Include="..\CoinBot.Discord\CoinBot.Discord.csproj"/>
+    </ItemGroup>
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 </Project>
