--- a/src/CoinBot.Core/CoinBot.Core.csproj
+++ b/src/CoinBot.Core/CoinBot.Core.csproj
@@ -28,6 +28,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.0.0"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0"/>
