--- a/src/CoinBot.Clients/CoinBot.Clients.csproj
+++ b/src/CoinBot.Clients/CoinBot.Clients.csproj
@@ -28,10 +28,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="2.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0"/>
-        <PackageReference Include="Newtonsoft.Json" Version="10.0.3"/>
+        <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.1"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.1"/>
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.1"/>
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+        <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.1"/>
         <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0"/>
         <PackageReference Include="System.Runtime.Serialization.Primitives" Version="4.3.0"/>
     </ItemGroup>
