--- a/src/CoinBot.Clients/CoinBot.Clients.csproj
+++ b/src/CoinBot.Clients/CoinBot.Clients.csproj
@@ -45,4 +45,10 @@
         <ProjectReference Include="..\CoinBot.Core\CoinBot.Core.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Reference Include="System.Text.Json, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
+            <HintPath>..\..\..\..\Program Files\dotnet\packs\Microsoft.NETCore.App.Ref\3.1.0\ref\netcoreapp3.1\System.Text.Json.dll</HintPath>
+        </Reference>
+    </ItemGroup>
+
 </Project>
