--- a/src/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot.csproj
@@ -57,7 +57,10 @@
         <None Remove="appsettings-local.json" />
     </ItemGroup>
     <ItemGroup>
-      <Content Include="appsettings.json">
+      <Content Include="appsettings.json" />
+    </ItemGroup>
+    <ItemGroup>
+      <Content Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
         <Content Update="appsettings-local.json" Condition="Exists('appsettings-local.json')">
