--- a/src/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot.csproj
@@ -7,7 +7,7 @@
         <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
         <LangVersion>latest</LangVersion>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-        <WarningsAsErrors />
+        <WarningsAsErrors/>
         <NoWarn>1591</NoWarn>
         <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
         <Features>strict;flow-analysis</Features>
@@ -30,50 +30,57 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.2" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.2" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.2" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2" />
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2" />
-        <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.1.2"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.2"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.2"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.2"/>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.2"/>
+        <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="AsyncFixer" Version="1.1.6" PrivateAssets="All" />
-        <PackageReference Include="FunFair.CodeAnalysis" Version="1.0.5.144" PrivateAssets="All" />
-        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" PrivateAssets="All" />
-        <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.5.132" PrivateAssets="All" />
-        <PackageReference Include="SonarAnalyzer.CSharp" Version="8.4.0.15306" PrivateAssets="All" />
-        <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.3" PrivateAssets="All" />
+        <PackageReference Include="AsyncFixer" Version="1.1.6" PrivateAssets="All"/>
+        <PackageReference Include="FunFair.CodeAnalysis" Version="1.0.5.144" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" PrivateAssets="All"/>
+        <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.5.132" PrivateAssets="All"/>
+        <PackageReference Include="SonarAnalyzer.CSharp" Version="8.4.0.15306" PrivateAssets="All"/>
+        <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.3" PrivateAssets="All"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CoinBot.Clients\CoinBot.Clients.csproj" />
-        <ProjectReference Include="..\CoinBot.Core\CoinBot.Core.csproj" />
-        <ProjectReference Include="..\CoinBot.Discord\CoinBot.Discord.csproj" />
+        <ProjectReference Include="..\CoinBot.Clients\CoinBot.Clients.csproj"/>
+        <ProjectReference Include="..\CoinBot.Core\CoinBot.Core.csproj"/>
+        <ProjectReference Include="..\CoinBot.Discord\CoinBot.Discord.csproj"/>
     </ItemGroup>
     <ItemGroup>
-        <None Remove="appsettings-local.json" />
+        <None Remove="appsettings-local.json"/>
     </ItemGroup>
     <ItemGroup>
-      <Content Include="appsettings.json" />
+        <Content Include="appsettings.json"/>
     </ItemGroup>
     <ItemGroup>
-      <Content Update="appsettings.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </Content>
+        <Content Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+        </Content>
         <Content Update="appsettings-local.json" Condition="Exists('appsettings-local.json')">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
         </Content>
     </ItemGroup>
+    <!--
+    <Target Name="PrePublish" BeforeTargets="PrepareForPublish">
+        <Copy SourceFiles="appsettings.json" DestinationFiles="$(PublishDir)\appsettings.json" SkipUnchangedFiles="true"/>
+    </Target>
+    -->
 
     <ItemGroup>
-        <TrimmerRootAssembly Include="System.Text.Json" />
-        <TrimmerRootAssembly Include="System.IO.MemoryMappedFiles" />
-        <TrimmerRootAssembly Include="System.Resources.Writer" />
-        <TrimmerRootAssembly Include="System.Threading.ThreadPool" />
-        <TrimmerRootAssembly Include="System.Transactions" />
-        <TrimmerRootAssembly Include="System.Diagnostics.FileVersionInfo" />
+        <TrimmerRootAssembly Include="System.Text.Json"/>
+        <TrimmerRootAssembly Include="System.IO.MemoryMappedFiles"/>
+        <TrimmerRootAssembly Include="System.Resources.Writer"/>
+        <TrimmerRootAssembly Include="System.Threading.ThreadPool"/>
+        <TrimmerRootAssembly Include="System.Transactions"/>
+        <TrimmerRootAssembly Include="System.Diagnostics.FileVersionInfo"/>
     </ItemGroup>
 </Project>
