Additional code analysis

--- a/src/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot.csproj
@@ -44,6 +44,7 @@
         <PackageReference Include="FunFair.CodeAnalysis" Version="1.0.5.144" PrivateAssets="All"/>
         <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8" PrivateAssets="All"/>
         <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="16.5.132" PrivateAssets="All"/>
+        <PackageReference Include="Roslynator.Analyzers" Version="2.3.0" PrivateAssets="All"/>
         <PackageReference Include="SonarAnalyzer.CSharp" Version="8.4.0.15306" PrivateAssets="All"/>
         <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.3" PrivateAssets="All"/>
     </ItemGroup>
