[FF-1429] - Update .github/labeler.yml to match the template repo

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,73 +1,3 @@
-"C#":
- - ./**/*.cs
- - ./**/*.csproj
-
-"C# Project":
- - ./**/*.csproj
-
-"C# Solution":
- - ./**/*.sln
-
-"Powershell":
- - ./**/*.ps1
- - ./**/*.psm1
-
-"SQL":
- - db/**/*
- - ./**/*.sql
-
-"Solidity":
- - ./**/*.sol
-
-"unit-tests":
- - src/*.Tests.*/**/*
- - src/*.Tests/**/*
- - src/*.Tests.Integration.*/**/*
- - src/*.Tests.Integration/**/*
-
-".NET update":
- - src/global.json
-
 "Config Change":
- - !src/global.json
- - src/**/*.json
-
-"Static Code Analysis Rules":
- - src/CodeAnalysis.ruleset
-
-"Migration Script":
- - tools/MigrationScripts/**/*
-
-"Legal Text":
- - tools/LegalText/**/*
-
-"Change Log":
- - CHANGELOG.md
-
-"Read Me":
- - README.md
-
-"Setup":
- - SETUP.md
-
-"Markdown":
- - ./**/*.md
-
-"github-actions":
- - .github/workflows/*.yml
-
-"CoinBot":
- - src/CoinBot/**/*
-
-"Clients":
- - src/CoinBot.Clients/**/*
-
-"Core":
- - src/CoinBot.Core/**/*
-
-"Core.Tests":
- - src/CoinBot.Core.Tests/**/*
-
-"Discord":
- - src/CoinBot.Discord/**/*
-
+ - any: [ , 'src/**/*.json''!src/global.json'
+ ]
