--- a/src/CoinBot.Discord/CoinBot.Discord.csproj
+++ b/src/CoinBot.Discord/CoinBot.Discord.csproj
@@ -12,6 +12,7 @@
         <Nullable>enable</Nullable>
         <IncludeOpenAPIAnalyzers>true</IncludeOpenAPIAnalyzers>
         <IsPackable>false</IsPackable>
+      <IsPublishable>false</IsPublishable>
         <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(MSBuildProjectName).xml</DocumentationFile>
     </PropertyGroup>
     <PropertyGroup>
