[FF-1429] - Update .github/labeler.yml to match the template repo

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,2 +1,44 @@
+"C#":
+ - any: [ './**/*.cs', './**/*.csproj' ]
+"C# Project":
+ - any: [ './**/*.csproj' ]
+"C# Solution":
+ - any: [ './**/*.sln' ]
+"Powershell":
+ - any: [ './**/*.ps1', './**/*.psm1' ]
+"SQL":
+ - any: [ './**/*.sql', 'db/**/*' ]
+"Solidity":
+ - any: [ './**/*.sol' ]
+"unit-tests":
+ - any: [ 'src/*.Tests.*/**/*', 'src/*.Tests.Integration.*/**/*', 'src/*.Tests.Integration/**/*', 'src/*.Tests/**/*' ]
+".NET update":
+ - any: [ 'src/global.json' ]
 "Config Change":
  - any: [ 'src/**/*.json', '!src/global.json' ]
+"Static Code Analysis Rules":
+ - any: [ 'src/CodeAnalysis.ruleset' ]
+"Migration Script":
+ - any: [ 'tools/MigrationScripts/**/*' ]
+"Legal Text":
+ - any: [ 'tools/LegalText/**/*' ]
+"Change Log":
+ - any: [ 'CHANGELOG.md' ]
+"Read Me":
+ - any: [ 'README.md' ]
+"Setup":
+ - any: [ 'SETUP.md' ]
+"Markdown":
+ - any: [ './**/*.md' ]
+"github-actions":
+ - any: [ '.github/workflows/*.yml' ]
+"CoinBot":
+ - any: [ 'src/CoinBot/**/*' ]
+"Clients":
+ - any: [ 'src/CoinBot.Clients/**/*' ]
+"Core":
+ - any: [ 'src/CoinBot.Core/**/*' ]
+"Core.Tests":
+ - any: [ 'src/CoinBot.Core.Tests/**/*' ]
+"Discord":
+ - any: [ 'src/CoinBot.Discord/**/*' ]
