--- a/src/CoinBot.Core.Tests/CoinBot.Core.Tests.csproj
+++ b/src/CoinBot.Core.Tests/CoinBot.Core.Tests.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <RunAOTCompilation>true</RunAOTCompilation>
     <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
     <Features>strict;flow-analysis</Features>
     <GenerateNeutralResourcesLanguageAttribute>true</GenerateNeutralResourcesLanguageAttribute>
