--- a/src/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot.csproj
@@ -13,7 +13,7 @@
     <NoWarn>1591</NoWarn>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
-    <RunAOTCompilation>true</RunAOTCompilation>
+    <RunAOTCompilation>fale</RunAOTCompilation>
     <RuntimeIdentifiers>win-x64;win10-x64;win81-x64;osx.10.12-x64;linux-x64</RuntimeIdentifiers>
     <TargetFramework>net6.0</TargetFramework>
     <TieredCompilation>true</TieredCompilation>
