--- a/src/CoinBot.Core.Tests/CoinBot.Core.Tests.csproj
+++ b/src/CoinBot.Core.Tests/CoinBot.Core.Tests.csproj
@@ -11,7 +11,7 @@
     <NoWarn />
     <Nullable>enable</Nullable>
     <OutputType>Library</OutputType>
-    <RunAOTCompilation>fale</RunAOTCompilation>
+    <RunAOTCompilation>false</RunAOTCompilation>
     <TargetFramework>net7.0</TargetFramework>
     <TieredCompilation>true</TieredCompilation>
     <TreatSpecificWarningsAsErrors />
